--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
         <hr>
 
         <section id="main_content">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+          <p>El projecte Intraweb va néixer amb l'objectiu de proporcionar als centres educatius les eines necessàries per construir intranets pròpies. En aquest sentit es varen trobar en el món del programari lliure les eines adients per fer-ho, de manera que es varen avaluar diverses opcions i es va prendre la decisió de desenvolupar una maqueta basada en el programari PostNuke. El projecte ha evolucionat i, actualment, es basa en el programari Zikula.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
