Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,30 +31,27 @@
         <hr>
 
         <section id="main_content">
-          <p>El projecte Intraweb va néixer amb l'objectiu de proporcionar als centres educatius les eines necessàries per construir intranets pròpies. En aquest sentit es varen trobar en el món del programari lliure les eines adients per fer-ho, de manera que es varen avaluar diverses opcions i es va prendre la decisió de desenvolupar una maqueta basada en el programari PostNuke. El projecte ha evolucionat i, actualment, es basa en el programari Zikula.</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+          <p>El projecte Intraweb va néixer amb l'objectiu de proporcionar als centres educatius les eines necessàries per construir intranets pròpies. Es basa en el framework Zikula. Inclou mòduls per la reserva d'aules, formularis, integració amb activitats interactives <a href="http://clic.xtec.cat/ca/index.htm">jclic</a> i <a href="http://clic.xtec.cat//qv_web/ca/qv.htm">Quaderns virtuals</a>, etc.</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="documentaci%C3%B3" class="anchor" href="#documentaci%C3%B3"><span class="octicon octicon-link"></span></a>Documentació</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
+<ul>
+<li>Wiki: <a href="https://sites.google.com/a/xtec.cat/projecte-intraweb/">https://sites.google.com/a/xtec.cat/projecte-intraweb/</a>
+</li>
+<li><a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d134/index">Curs d'Instal·lació i Administració</a></li>
+<li><a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d203/index">Curs "Ús i dinamització de la intranet</a></li>
+</ul><h3>
 <a name="%C3%80gora" class="anchor" href="#%C3%80gora"><span class="octicon octicon-link"></span></a>Àgora</h3>
 
 <p>Hosting i support de Intrawebs al Departament d'Ensenyament (Generalitat de Catalunya).
 Pots trobar més informació a <a href="http://agora.xtec.cat/">Àgora - Intranets</a></p>
+
+<h3>
+<a name="suport" class="anchor" href="#suport"><span class="octicon octicon-link"></span></a>Suport</h3>
+
+<p>*Si teniu la intranet a Àgora, podeu demanar ajuda al <a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=181">forum d'Àgora</a>. Si la vostre consulta inclou dades personals o requereix una intervenció urgent, podeu fer una petició al SAU. 
+*Si sou un centre educatiu públic o concertat podeu demanar una intranet dins del servei Àgora.   </p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
