Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <hr>
 
         <section id="main_content">
-          <p>El projecte Intraweb va néixer amb l'objectiu de proporcionar als centres educatius les eines necessàries per construir intranets pròpies. Es basa en el framework Zikula. Inclou mòduls per la reserva d'aules, formularis, integració amb activitats interactives <a href="http://clic.xtec.cat/ca/index.htm">jclic</a> i <a href="http://clic.xtec.cat//qv_web/ca/qv.htm">Quaderns virtuals</a>, etc.</p>
+          <p>El projecte Intraweb va néixer amb l'objectiu de proporcionar als centres educatius les eines necessàries per construir intranets pròpies. Es basa en el framework Zikula. Inclou mòduls per la reserva d'aules, formularis, integració amb activitats interactives <a href="http://clic.xtec.cat/ca/index.htm">Jclic</a> i <a href="http://clic.xtec.cat//qv_web/ca/qv.htm">Quaderns virtuals</a>, etc.</p>
 
 <h3>
 <a name="documentaci%C3%B3" class="anchor" href="#documentaci%C3%B3"><span class="octicon octicon-link"></span></a>Documentació</h3>
@@ -39,8 +39,10 @@
 <ul>
 <li>Wiki: <a href="https://sites.google.com/a/xtec.cat/projecte-intraweb/">https://sites.google.com/a/xtec.cat/projecte-intraweb/</a>
 </li>
-<li><a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d134/index">Curs d'Instal·lació i Administració</a></li>
-<li><a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d203/index">Curs "Ús i dinamització de la intranet</a></li>
+<li>Curs: <a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d134/index"> Instal·lació i Administració de la intranet</a>
+</li>
+<li>Curs: <a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d203/index"> Ús i dinamització de la intranet</a>
+</li>
 </ul><h3>
 <a name="%C3%80gora" class="anchor" href="#%C3%80gora"><span class="octicon octicon-link"></span></a>Àgora</h3>
 
@@ -50,18 +52,11 @@ Pots trobar més informació a <a href="http://agora.xtec.cat/">Àgora - Intrane
 <h3>
 <a name="suport" class="anchor" href="#suport"><span class="octicon octicon-link"></span></a>Suport</h3>
 
-<p>*Si teniu la intranet a Àgora, podeu demanar ajuda al <a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=181">forum d'Àgora</a>. Si la vostre consulta inclou dades privades o requereix una intervenció urgent podeu fer una petició al <a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a>. 
-*Si sou un centre educatiu públic o concertat podeu demanar una intranet dins del servei Àgora.   </p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<ul>
+<li>Si teniu la intranet a Àgora, podeu demanar ajuda al <a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=181">forum d'Àgora</a>. Si la vostre consulta inclou dades privades o requereix una intervenció urgent podeu fer una petició al <a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a>. </li>
+<li>Si sou un centre educatiu públic o concertat podeu demanar una intranet dins del servei Àgora.<br>
+</li>
+</ul>
         </section>
 
         <footer>
