Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,16 +46,27 @@
 </ul><h3>
 <a name="%C3%80gora" class="anchor" href="#%C3%80gora"><span class="octicon octicon-link"></span></a>Àgora</h3>
 
-<p>Hosting i support de Intrawebs al Departament d'Ensenyament (Generalitat de Catalunya).
-Pots trobar més informació a <a href="http://agora.xtec.cat/">Àgora - Intranets</a></p>
+<p>Àgora és un sistema d'allotjament múltiple de Moodle i Intranets que ofereix el Departament d'Ensenyament als centres docents de Catalunya.
+Qualsevol centre educatiu amb identificador i nom propi de la XTEC pot demanar l'alta a qualsevol dels serveis que inclou el projecte Àgora. Pots trobar més informació a <a href="http://agora.xtec.cat/">Àgora</a></p>
 
 <h3>
 <a name="suport" class="anchor" href="#suport"><span class="octicon octicon-link"></span></a>Suport</h3>
 
 <ul>
+<li>Preguntes Freqüents.</li>
+<li>Fòrum (històric)</li>
+<li>Errors (Issues github) </li>
 <li>Si teniu la intranet a Àgora, podeu demanar ajuda al <a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=181">forum d'Àgora</a>. Si la vostre consulta inclou dades privades o requereix una intervenció urgent podeu fer una petició al <a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a>. </li>
-<li>Si sou un centre educatiu públic o concertat podeu demanar una intranet dins del servei Àgora.<br>
-</li>
+</ul><h3>
+<a name="errors" class="anchor" href="#errors"><span class="octicon octicon-link"></span></a>Errors</h3>
+
+<ul>
+<li>Si trobeu cap error, podeu reportar-lo <a href="https://github.com/projectestac/intraweb/issues">aquí</a>.</li>
+</ul><h3>
+<a name="suggeriments" class="anchor" href="#suggeriments"><span class="octicon octicon-link"></span></a>Suggeriments</h3>
+
+<ul>
+<li>Podeu demanar noves funcionalitats i/o millores <a href="https://github.com/projectestac/intraweb/pulls">aquí</a>. </li>
 </ul>
         </section>
 
