Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Qualsevol centre educatiu amb identificador i nom propi de la XTEC pot demanar l
 
 <ul>
 <li>Preguntes Freqüents.</li>
-<li>Fòrum (històric)</li>
+<li>Fòrum (Històric, només lectura)</li>
 <li>Errors (Issues github) </li>
 <li>Si teniu la intranet a Àgora, podeu demanar ajuda al <a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=181">forum d'Àgora</a>. Si la vostre consulta inclou dades privades o requereix una intervenció urgent podeu fer una petició al <a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a>. </li>
 </ul><h3>
