Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Qualsevol centre educatiu amb identificador i nom propi de la XTEC pot demanar l
 <a name="suggeriments" class="anchor" href="#suggeriments"><span class="octicon octicon-link"></span></a>Suggeriments</h3>
 
 <ul>
-<li>Podeu demanar noves funcionalitats i/o millores <a href="https://github.com/projectestac/intraweb/pulls">aquí</a>. </li>
+<li>Podeu demanar millores i/o noves funcionalitats <a href="https://github.com/projectestac/intraweb/pulls">aquí</a>. </li>
 </ul>
         </section>
 
