--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 </ul><h3>
 <a name="%C3%80gora" class="anchor" href="#%C3%80gora"><span class="octicon octicon-link"></span></a>Àgora</h3>
 
-<p>Àgora és un sistema d'allotjament múltiple de Moodle i Intranets que ofereix el Departament d'Ensenyament als centres docents de Catalunya.
-Qualsevol centre educatiu amb identificador i nom propi de la XTEC pot demanar l'alta a qualsevol dels serveis que inclou el projecte Àgora. Pots trobar més informació a <a href="http://agora.xtec.cat/">Àgora</a></p>
+<p>Si sou un centre educatiu amb identificador i nom propi de la XTEC podeu demanar l'alta a qualsevol dels serveis que inclou Àgora. <a href="http://agora.xtec.cat/">Àgora</a> és un sistema d'allotjament múltiple de Moodle i Intranets que ofereix el Departament d'Ensenyament als centres docents de Catalunya.
+Qualsevol centre educatiu amb identificador i nom propi de la XTEC pot demanar l'alta a qualsevol dels serveis que inclou el projecte Àgora. </p>
 
 <h3>
 <a name="suport" class="anchor" href="#suport"><span class="octicon octicon-link"></span></a>Suport</h3>
