Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <ul>
 <li>Preguntes Freqüents.</li>
 <li>Fòrum (Històric, només lectura)</li>
-<li>Si teniu l'intraweb a Àgora, podeu demanar ajuda al <a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=181">forum d'Àgora</a>. Si la vostre consulta inclou dades privades o requereix una intervenció urgent podeu fer una petició al <a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a>.</li>
+<li>Si teniu l'intraweb a Àgora i usuari xtec, heu de demanar ajuda al <a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=181">forum d'Àgora</a>. Si la vostre consulta inclou dades privades o requereix una intervenció urgent podeu fer una petició al <a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a>.</li>
 </ul><h3>
 <a name="errors" class="anchor" href="#errors"><span class="octicon octicon-link"></span></a>Errors</h3>
 
