Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
 </ul><h3>
 <a name="%C3%80gora" class="anchor" href="#%C3%80gora"><span class="octicon octicon-link"></span></a>Àgora</h3>
 
-<p><a href="http://agora.xtec.cat/">Àgora</a> és un sistema d'allotjament múltiple de Moodle i Intranets que ofereix el Departament d'Ensenyament als centres docents de Catalunya. Si sou un centre educatiu amb identificador i nom propi de la XTEC podeu demanar l'alta en aquest servei. </p>
+<p>Si sou un centre educatiu de Catalunya amb identificador i nom propi de la XTEC podeu demanar l'alta a <a href="http://agora.xtec.cat/">Àgora</a>. Àgora és un servei d'allotjament i suport que inclou Moodle i Intranet.  </p>
 
 <h3>
 <a name="suport" class="anchor" href="#suport"><span class="octicon octicon-link"></span></a>Suport</h3>
 
 <ul>
 <li>Preguntes Freqüents.</li>
-<li>Fòrum (Històric, només lectura)</li>
-<li>Si teniu l'intraweb a Àgora i usuari xtec, heu de demanar ajuda al <a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=181">forum d'Àgora</a>. Si la vostre consulta inclou dades privades o requereix una intervenció urgent podeu fer una petició al <a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a>.</li>
+<li>Fòrum (històric, només lectura)</li>
+<li>Si teniu la intranet a Àgora i usuari xtec, heu de demanar ajuda al <a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=181">forum d'Àgora</a>. Si la vostre consulta inclou dades privades o requereix una intervenció urgent podeu fer una petició al <a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a>.</li>
 </ul><h3>
 <a name="errors" class="anchor" href="#errors"><span class="octicon octicon-link"></span></a>Errors</h3>
 
