Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,40 +34,42 @@
           <h2>
 <a name="descripci%C3%B3" class="anchor" href="#descripci%C3%B3"><span class="octicon octicon-link"></span></a>Descripció</h2>
 
-<p>El projecte Intraweb va néixer amb l'objectiu de proporcionar als centres educatius les eines necessàries per construir pàgines web públiques amb part privada. Es basa en el gestor de continguts Zikula i inclou mòduls d'agendes, de reserva d'aules, de gestió de documents, de formularis, d'integració amb activitats interactives <a href="http://clic.xtec.cat/ca/index.htm">Jclic</a> i <a href="http://clic.xtec.cat/qv_web/ca/qv.htm">Quaderns virtuals</a>, etc.</p>
+<p>El projecte Intraweb, desenvolupat pel Departament d'Ensenyament de la Generalitat de Catalunya, va néixer amb l'objectiu de proporcionar als centres educatius les eines necessàries per construir pàgines web públiques amb part privada. Es basa en el gestor de continguts Zikula i inclou mòduls d'agendes, de reserva d'aules, de gestió de documents, de formularis, d'integració amb activitats interactives <a href="http://clic.xtec.cat/ca/index.htm">Jclic</a> i <a href="http://clic.xtec.cat/qv_web/ca/qv.htm">Quaderns virtuals</a>, etc.</p>
 
-<h3>
-<a name="documentaci%C3%B3" class="anchor" href="#documentaci%C3%B3"><span class="octicon octicon-link"></span></a>Documentació</h3>
+<p>Actualment el Departament d'Ensenyament, dins dels serveis d'Àgora, ofereix espais Intraweb als centres educatius públics i concertats de Catalunya. Els centres que disposen d'aquests espais no han de fer cap instal·lació ni manteniment de la seva Intraweb, atès que es fa de manera centralitzada.</p>
+
+<h2>
+<a name="documentaci%C3%B3" class="anchor" href="#documentaci%C3%B3"><span class="octicon octicon-link"></span></a>Documentació</h2>
 
 <ul>
 <li>Wiki: <a href="https://sites.google.com/a/xtec.cat/projecte-intraweb/">https://sites.google.com/a/xtec.cat/projecte-intraweb/</a>
 </li>
+<li>
+<a href="http://agora.xtec.cat/moodle/moodle/mod/page/view.php?id=581">Preguntes freqüents d'Àgora&gt;</a>.</li>
 <li>Curs: <a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d134/index"> Instal·lació i Administració de la intranet</a>
 </li>
 <li>Curs: <a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d203/index"> Ús i dinamització de la intranet</a>
 </li>
-</ul><h3>
-<a name="%C3%80gora" class="anchor" href="#%C3%80gora"><span class="octicon octicon-link"></span></a>Àgora</h3>
-
-<p>Si sou un centre educatiu de Catalunya amb identificador i nom propi de la XTEC podeu demanar l'alta a <a href="http://agora.xtec.cat/">Àgora</a>. Àgora és un servei d'allotjament i suport que inclou Moodle i Intranet.  </p>
-
-<h3>
-<a name="suport" class="anchor" href="#suport"><span class="octicon octicon-link"></span></a>Suport</h3>
+</ul><h2>
+<a name="suport" class="anchor" href="#suport"><span class="octicon octicon-link"></span></a>Suport</h2>
 
 <ul>
-<li>Preguntes Freqüents.</li>
-<li>Fòrum (històric, només lectura)</li>
-<li>Si teniu la intranet a Àgora i usuari xtec, heu de demanar ajuda al <a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=181">forum d'Àgora</a>. Si la vostre consulta inclou dades privades o requereix una intervenció urgent podeu fer una petició al <a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a>.</li>
-</ul><h3>
-<a name="errors" class="anchor" href="#errors"><span class="octicon octicon-link"></span></a>Errors</h3>
+<li>
+<a href="http://agora.xtec.cat/moodle/moodle/mod/forum/view.php?id=1161">Fòrum</a> (accés amb el compte XTEC).</li>
+<li>
+<a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a> (accés amb el compte XTEC).</li>
+<li>
+<a href="">Fòrum històric</a> (només lectura).</li>
+<li>
+<a href="https://github.com/projectestac/intraweb/issues">Notificació d'errors</a>.</li>
+</ul><h2>
+<a name="contacte" class="anchor" href="#contacte"><span class="octicon octicon-link"></span></a>Contacte</h2>
 
 <ul>
-<li>Si trobeu cap error, podeu reportar-lo <a href="https://github.com/projectestac/intraweb/issues">aquí</a>.</li>
-</ul><h3>
-<a name="suggeriments" class="anchor" href="#suggeriments"><span class="octicon octicon-link"></span></a>Suggeriments</h3>
-
-<ul>
-<li>Podeu demanar millores i/o noves funcionalitats <a href="https://github.com/projectestac/intraweb/pulls">aquí</a>. </li>
+<li>
+<a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a> (accés amb el compte XTEC).</li>
+<li>Correu electrònic: <a href="mailto:intraweb@xtec.cat">intraweb@xtec.cat</a>
+</li>
 </ul>
         </section>
 
