Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <li>Wiki: <a href="https://sites.google.com/a/xtec.cat/projecte-intraweb/">https://sites.google.com/a/xtec.cat/projecte-intraweb/</a>
 </li>
 <li>
-<a href="http://agora.xtec.cat/moodle/moodle/mod/page/view.php?id=581">Preguntes freqüents d'Àgora&gt;</a>.</li>
+<a href="http://agora.xtec.cat/moodle/moodle/mod/page/view.php?id=581">Preguntes freqüents d'Àgora</a>.</li>
 <li>Curs: <a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d134/index"> Instal·lació i Administració de la intranet</a>
 </li>
 <li>Curs: <a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d203/index"> Ús i dinamització de la intranet</a>
