Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 </li>
 <li>
 <a href="http://agora.xtec.cat/moodle/moodle/mod/page/view.php?id=581">Preguntes freqüents d'Àgora</a>.</li>
-<li>Curs: <a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d134/index"> Instal·lació i Administració de la intranet</a>
+<li>Curs: <a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d134/index"> Instal·lació i Administració de la Intraweb</a>
 </li>
-<li>Curs: <a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d203/index"> Ús i dinamització de la intranet</a>
+<li>Curs: <a href="http://apliedu.xtec.cat/wikiform/wikiexport/cursos/gestio_centres/d203/index"> Ús i dinamització de la Intraweb</a>
 </li>
 </ul><h2>
 <a name="suport" class="anchor" href="#suport"><span class="octicon octicon-link"></span></a>Suport</h2>
@@ -59,7 +59,7 @@
 <li>
 <a href="http://agora.xtec.cat/moodle/moodle/mod/questionnaire/view.php?id=481">SAU</a> (accés amb el compte XTEC).</li>
 <li>
-<a href="">Fòrum històric</a> (només lectura).</li>
+<a href="http://agora.xtec.cat/moodle/moodle/pluginfile.php/185784/mod_resource/content/4/index.html">Fòrum històric</a> (només lectura).</li>
 <li>
 <a href="https://github.com/projectestac/intraweb/issues">Notificació d'errors</a>.</li>
 </ul><h2>
