--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <hr>
 
         <section id="main_content">
+<div class="warning">
+<strong>ATENCIÓ:</strong> Aquest repositori conté la versió final del projecte Intraweb a juliol de 2016 i ja no és objecte de cap tipus d'actualització, manteniment o suport. El codi aquí publicat ho és només a efectes d'estudi i experimentació. En tractar-se d'un repositori de programari congelat en el temps, és probable que ja no compleixi els requisits de seguretat exigibles a qualsevol aplicació exposada a Internet.
+</div>
+
+
           <h2>
 <a name="descripci%C3%B3" class="anchor" href="#descripci%C3%B3"><span class="octicon octicon-link"></span></a>Descripció</h2>
 
